2021-05-19 "VIVID"
 * New features:
   * Can pull data from "Where the ISS?" to track upcoming
     positions on the map. (Press [T])
   * Auto-refresh ISS's position (now press [R] to refresh manually)
   * Previous ISS positions leave a trail (of sprites)
   * Audible feedback when interacting with the program
 * Visual improvements:
   * Improved default map colors; removed grid from continents
   * Faster and nicer looking text blitting over the map
   * Nicer color-cycling of ISS sprite
   * Label latitude (N/North) & longitude (E/East)
 * Build changes:
   * New STARTADDRESS (so folks who forget to disable BASIC can
     run it)

2021-05-18 "OVERCAST"
 * Initial release
   + Displays map, fetches ISS position and can show who's in space
     (both via data from "Open-Notify")
