@@ -1,10 +1,10 @@
 #ifndef COLORS_H
 #define COLORS_H
 
-#define DEFAULT_COLOR4 0x8A /* blue oceans */
-#define DEFAULT_COLOR0 0x88 /* grid over oceans */
-#define DEFAULT_COLOR1 0xB4 /* continents (also, lum used by text) */
-#define DEFAULT_COLOR2 0xB0 /* grid over continents (also, lum used by text background) */
+#define DEFAULT_COLOR4 0x00 /* bored & tracking dots */
+#define DEFAULT_COLOR0 0x8A /* oceans */
+#define DEFAULT_COLOR1 0x88 /* grid over oceans */
+#define DEFAULT_COLOR2 0xB4 /* continents */
 
 extern unsigned char color0, color1, color2, color4;
 
